--- a/Adecco/Views/contactXml/Index.cshtml
+++ b/Adecco/Views/contactXml/Index.cshtml
@@ -25,11 +25,15 @@
         }
         <tr>
             <td>
-                @Html.ActionLink("First", "Index", new { id = 0 })
+                @Html.ActionLink("1-10", "Index", new { id = 0 })
             </td> 
-            <td> @Html.ActionLink("Second", "Index", new { id = 1 })  </td>
+            </tr>
+            <tr>
+            <td> @Html.ActionLink("11-20", "Index", new { id = 1 })  </td>
+                </tr>
+                <tr>
             <td>
-                @Html.ActionLink("Third", "Index", new { id = 2 })
+                @Html.ActionLink("21-25", "Index", new { id = 2 })
             </td> 
         </tr>
 
