--- a/Adecco/Views/Contacts/Details.cshtml
+++ b/Adecco/Views/Contacts/Details.cshtml
@@ -69,6 +69,5 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Close", "Index", new { id = Model.Id / 10 })
 </p>
