--- a/Adecco/Views/Contacts/Index.cshtml
+++ b/Adecco/Views/Contacts/Index.cshtml
@@ -1,69 +1,43 @@
-﻿@model IEnumerable<Adecco.Models.Contact>
-
+﻿
 @{
     ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
+@using Adecco.Models;
+@model IEnumerable<Adecco.Models.Contact>
+<h2>Contact List from XML</h2>
+<table class="table table-bordered">
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Email)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.BusinessNumber)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.HomeNumber)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.MobileNumber)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Address)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Notes)
-        </th>
-        <th></th>
+        <th>Id</th>
+
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.BusinessNumber)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.HomeNumber)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.MobileNumber)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Address)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Notes)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
 
-</table>
+
+    @{ var list = Model.ToList();
+        for (int i = 0; i < list.Count; i++)
+        {
+            <tr>
+                <td>@Html.ActionLink((list[i].Name), "Details", new { id = list[i].Id })</td>
+
+            </tr>
+
+        }
+        <tr>
+            <td>
+                @Html.ActionLink("1-10", "Index", new { id = 0 })
+            </td>
+        </tr>
+            <tr>
+                <td> @Html.ActionLink("11-20", "Index", new { id = 1 })  </td>
+            </tr>
+                <tr>
+                    <td>
+                        @Html.ActionLink("21-25", "Index", new { id = 2 })
+                    </td>
+                </tr>
+
+
+    }
+
+</table>  
